# ipbeeldbuis

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release.yml
python/ipbeeldbuis/: __init__.py  __main__.py
src/: cache.rs  chromecast.rs  epg.rs  m3u.rs  main.rs  player.rs  ui.rs
