[package]
name = "ipbeeldbuis"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ipb"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.30"
crossterm = "0.29"
reqwest = { version = "0.13", features = ["blocking"] }
anyhow = "1"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = "0.39"
flate2 = "1"
