[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipbeeldbuis"
version = "0.2.0"
description = "IPTV stream picker TUI"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/stanlocht/ipbeeldbuis"

[project.scripts]
ipbeeldbuis = "ipbeeldbuis:main"

[tool.hatch.build.targets.wheel]
packages = ["python/ipbeeldbuis"]
